@@ -31,7 +31,7 @@ jersey.version=1.8
 checkstyle.version=4.2
 ivy.version=2.2.0
 jasper.version=6.1.14
-guava.version=r06
+guava.version=11.0
 jersey-core.version=1.8
 hadoop-core.version=0.20.205.0
 hadoop-test.version=0.20.205.0
