@@ -41,7 +41,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>r06</version>
+      <version>11.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
